2007-04-09  Brian Cameron  <brian.cameron@sun.com>

	* gui/gdmflexiserver.c: Slightly better fix that causes gdmflexiserver
	  to display the dialog GUI when not using --command, and display a
	  text error when using --command.

2007-04-09  Brian Cameron  <brian.cameron@sun.com>

	* gui/gdmflexiserver.c: Report an error message when the gdmcomm_check
	  test fails.

2007-04-06  William Jon McCann  <mccann@jhu.edu>

	* daemon/slave.c: (gdm_slave_greeter):
	Remove duplicate code from bad svn merge.
	From #427022

2007-04-06  Brian Cameron  <brian.cameron@sun.com>

	* daemon/gdm.in: Fix script so it works with Solaris /bin/sh.

2007-04-06  Brian Cameron  <brian.cameron@sun.com>

	* config/CDE.desktop.in: Change name of CDE to "Common Desktop
	  Environment (CDE)".

2007-04-06  Brian Cameron  <brian.cameron@sun.com>

	* gui/gdmcomm.c: Fix messages so that they don't imply that
	  Xnest is the nested X server program, since it may be
	  Xephyr, or another program.

2007-04-06  Brian Cameron  <brian.cameron@sun.com>

	* gui/gdmcommon.[ch], gui/gdmlogin.c,
	  gui/greeter/greeter_item_ulist.c:  Usernames with non-utf8
	  characters were causing GDM GUI to crash when it tried to
	  display in the face browser.  This patch fixes so non-utf8
	  characters display as '?'.  Fixes bug #426647.  Patch by
	  Ray Strode <rstrode@redhat.com>.

2007-04-05  Brian Cameron  <brian.cameron@sun.com>

	* daemon/gdm.c: Return correct value when GET_CONFIG_FILE is 
	  asked for.  Previously the value was NULL when using the compiled
	  in default.
	* gui/gdmcomm.c: Make the message a bit nicer when GDM slave 
	  notices GDM daemon isn't running.
	* docs/C/gdm.xml: Improved docs some more.  Lukasz didn't update
	  all the places where the Face Browser change needed to be
	  mentioned.

2007-04-05  Lukasz Zalewski <lukas@dcs.qmul.ac.uk>

        * gui/gdmsetup.glade, gui/gdmsetup.c, doc/C/gdm.xml: 
          Added a "Themed with face browser option to the Local/Remote Style 