@@ -1,5 +1,9 @@
 2007-04-09  Brian Cameron  <brian.cameron@sun.com>
 
+	* gui/gdmflexiserver.c: Mark error strings for translation.
+
+2007-04-09  Brian Cameron  <brian.cameron@sun.com>
+
 	* gui/gdmflexiserver.c: Slightly better fix that causes gdmflexiserver
 	  to display the dialog GUI when not using --command, and display a
 	  text error when using --command.
